--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ h5,
 h6,
 p {
   margin: 0;
+  font-weight: 500;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -125,6 +126,7 @@ button:hover {
 .loading-results {
   opacity: 0.5;
   padding-bottom: 50px;
+  font-size: 20px;
 }
 
 .crypto-container {
@@ -180,6 +182,34 @@ footer svg {
 
 footer svg:hover {
   opacity: 0.5;
+}
+
+.loading {
+  text-align: center;
+}
+
+.loading:after {
+  content: " .";
+  animation: dots 1s steps(5, end) infinite;
+}
+
+@keyframes dots {
+  0%,
+  20% {
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  40% {
+    color: white;
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  60% {
+    text-shadow: 0.25em 0 0 white, 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  80%,
+  100% {
+    text-shadow: 0.25em 0 0 white, 0.5em 0 0 white;
+  }
 }
 
 /*MEDIA QUERIES*/
