--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,9 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #1a1a33;
@@ -15,7 +16,8 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 h1,
@@ -47,7 +49,11 @@ input {
   padding: 12px;
   border-radius: 15px;
   background: rgb(34, 35, 67);
-  background: linear-gradient(7deg, rgba(34, 35, 67, 1) 66%, rgba(37, 40, 75, 1) 100%);
+  background: linear-gradient(
+    7deg,
+    rgba(34, 35, 67, 1) 66%,
+    rgba(37, 40, 75, 1) 100%
+  );
 }
 
 input[type="submit"] {
@@ -135,7 +141,11 @@ button:hover {
   padding: 20px;
   border-radius: 10px;
   background: rgb(34, 35, 67);
-  background: linear-gradient(7deg, rgba(34, 35, 67, 1) 66%, rgba(37, 40, 75, 1) 100%);
+  background: linear-gradient(
+    7deg,
+    rgba(34, 35, 67, 1) 66%,
+    rgba(37, 40, 75, 1) 100%
+  );
 }
 
 .rates {
@@ -263,4 +273,38 @@ footer svg:hover {
   .crypto-container {
     grid-template-columns: repeat(5, 1fr);
   }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+::view-transition-old(root) {
+  animation: fade-out 200ms;
+}
+
+::view-transition-new(root) {
+  animation: fade-in 200ms;
+}
+
+.crypto-container {
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.crypto {
+  transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
